--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.10",
+    "accept-language": "^3.0.18",
+    "framer-motion": "^11.0.8",
+    "i18next": "^23.10.0",
+    "i18next-resources-to-backend": "^1.2.0",
+    "mobx": "^6.12.0",
+    "mobx-react-lite": "^4.0.5",
     "next": "14.1.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-i18next": "^14.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
