--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.0.0",
     "@heroicons/react": "^2.1.1",
-    "@nextui-org/react": "^2.2.10",
     "accept-language": "^3.0.18",
+    "antd": "^5.15.2",
     "framer-motion": "^11.0.8",
     "i18next": "^23.10.0",
     "i18next-browser-languagedetector": "^7.2.0",
